--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ var woocommerce_params = {"ajax_url":"\/wp-admin\/admin-ajax.php","wc_ajax_url":
                     <li class="mega-menu-item mega-menu-item-type-custom mega-menu-item-object-custom mega-menu-item-has-children mega-align-bottom-left mega-menu-flyout mega-menu-item" id="mega-menu-item-">
                         <a class="mega-menu-link" href="#" aria-haspopup="true" aria-expanded="false" tabindex="0">Artistas<span class="mega-indicator" data-has-click-event="true"></span></a><ul class="mega-sub-menu" style="">
                             
-                        </li><li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-240" id="mega-menu-item-240"><a class="mega-menu-link" href="catálogo.html">catálogo</a></li><li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-230" id="mega-menu-item-230"><a >
+                        </li><li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-240" id="mega-menu-item-240"><a class="mega-menu-link" href="catalogo.html">catálogo</a></li><li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-230" id="mega-menu-item-230"><a >
 
 
 
