--- a/index.html
+++ b/index.html
@@ -854,9 +854,7 @@ input[type="password"] {color: #cfcfcf;}
                     <h2 class="capitalize text-white text-5xl sm:text-5xl 2xl:text-7xl font-bold font-Paytone text-center relative" style="color: black;">Impacto</h2>
                     <div class="w-[20%] sm:w-[15%] bg-[#F4CA3A] mt-3 h-[5px] 2xl:h-[7px] rounded" style="background-color: aliceblue;"></div>
                 </div>
-                <p  class="text-justify text-white font-Dosis mt-8 text-lg 2xl:text-2xl" style="color: black;" >La educación contemporánea está experimentando una transformación radical, redefiniendo lo que significa "saber" mediante la integración de enfoques poéticos y herramientas en línea. Esta nueva ola educativa no solo transmite conocimientos, sino que también revoluciona cómo los estudiantes los perciben y utilizan, fomentando una re-evolución poética en el aprendizaje. En este contexto, la poesía no se refiere solo a versos y metáforas, sino a la capacidad de ver lo ordinario de manera extraordinaria, y de conectar ideas de manera que revelen nuevas verdades sobre el mundo y nosotros mismos.
-
-                    Las herramientas de aprendizaje en línea, como plataformas interactivas, cursos masivos abiertos en línea (MOOCs) y recursos multimedia, se han convertido en facilitadores clave de esta transformación. Permiten una exploración más profunda y personalizada de los contenidos, adaptándose a los estilos de aprendizaje individuales y promoviendo un enfoque constructivo hacia la educación. Al combinar estos métodos tecnológicos con una pedagogía que valora la exploración creativa como medio de Aprendizajap>
+                <p  class="text-justify text-white font-Dosis mt-8 text-lg 2xl:text-2xl" style="color: black;" >Impacto social de culturama p>
                 
                 </div>
             </div>
