--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@ input[type="password"] {color: #cfcfcf;}
     <section class="w-full relative h-auto" id="impacto">
         <div class="flex flex-col lg:flex-row gap-0 h-full">
             <div class="w-full lg:w-[45%] h-[40vh] lg:h-auto relative overflow-hidden">
-                <img src="learnsound.webp" alt="" class="w-full h-full object-cover perfmatters-lazy"  data-src=""><noscript><img src="
+                <img src="impacto.webp" alt="" class="w-full h-full object-cover perfmatters-lazy"  data-src=""><noscript><img src="
                     " alt=""  class="w-full h-full object-cover"></noscript>
             </div>
             <div class="w-full lg:w-[55%] bg-color_text h-full relative px-4 sm:px-12 py-10 lg:py-14" style="background-color: rgb(228, 255, 131);">
