--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es" prefix="og: https://ogp.me/ns#" data-lt-installed="true"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="log.png">
+    <link rel="icon" type="image/x-icon" href="Cultur_logo">
     
 <!-- Optimización para motores de búsqueda de Rank Math -  https://rankmath.com/ -->
 <title> Ideofónica CALL for Papers!</title>
@@ -67,11 +67,8 @@ var woocommerce_params = {"ajax_url":"\/wp-admin\/admin-ajax.php","wc_ajax_url":
 
 
 
-                
-			</style><noscript><style>.perfmatters-lazy[data-src]{display:none !important;}</style></noscript><link href="" rel="preload" as="script"><link href="" rel="preload" as="script"><link href="" rel="preload" as="script"><link href="" rel="preload" as="script">
-            <link href="https://stats.wp.com/w.js?ver=202415" rel="preload" as="script"><link href="" rel="preload" as="script"><link href="" rel="preload" as="script"><link href="" rel="preload" as="script"><link href="" rel="preload" as="script"><link href="" rel="preload" as="script"><link href="" rel="preload" as="script"><link rel="prefetch" href="" fetchpriority="high" as="document"><link rel="prefetch" href="" fetchpriority="high" as="document"></head>
-<body class="home page-template-default page page-id-104 theme-acpo woocommerce-js mega-menu-menu-principal elementor-default elementor-kit-523 elementor-page elementor-page-104">
-    <header class="w-[100vw] h-[70px] lg:h-[90px] 2xl:h-[130px] fixed top-0 left-0 items-center header bg-white bg-opacity-30 backdrop-blur-[100px]">
+</style><noscript><style>.perfmatters-lazy[data-src]{display:none !important;}</style></noscript><link href="" rel="preload" as="script"><link href="" rel="preload" as="script"><link href="" rel="preload" as="script"><link href="" rel="preload" as="script"><link href="https://stats.wp.com/w.js?ver=202415" rel="preload" as="script"><link href="" rel="preload" as="script"><link href="" rel="preload" as="script"><link href="" rel="preload" as="script"><link href="" rel="preload" as="script"><link href="" rel="preload" as="script"><link href="" rel="preload" as="script"><link rel="prefetch" href="" fetchpriority="high" as="document"><link rel="prefetch" href="" fetchpriority="high" as="document"></head>
+    <header class="w-[100vw] h-[80px] lg:h-[90px] 2xl:h-[130px] fixed top-0 left-0 items-center header bg-white bg-opacity-30 backdrop-blur-[100px]">
         </div>
         <div class="absolute w-[94%] lg:w-[%] left-[3%] lg:left-[6%] flex items-center justify-between h-full">
             <a href="index.html">
