--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@ input[type="password"] {color: #cfcfcf;}
             <p class="text-justify text-gray-900 font-Dosis mt-8 text-lg 2xl:text-2xl"> Servicio a la comunidad educativa y sectores de la ciudad, promocionando e incentivando la lectura.</p>
 
             <div class="mt-5 sm:mt-10 2xl:mt-14 -ml-2 sm:ml-0 flex items-center gap-4">
-                <a href="Acuerdo-003-marzo-2024.pdf" target="_blank" class="text-white font-semibold font-Dosis bg-color_text py-3 px-8 w-fit rounded-full text-base 2xl:text-lg" style="background-color: #cfcfcf;"> Tarifaz Auditorio</a>
+                <a href="Acuerdo-003-marzo-2024.pdf" target="_blank" class="text-white font-semibold font-Dosis bg-color_text py-3 px-8 w-fit rounded-full text-base 2xl:text-lg" style="background-color: #cfcfcf;"> Tarifas Auditorio</a>
             </div>
         </div>
     </div>
