--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es" prefix="og: https://ogp.me/ns#" data-lt-installed="true"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="Cultur_logo">
+    <link rel="icon" type="image/x-icon" href="Cultur_logo.webp">
     
 <!-- Optimización para motores de búsqueda de Rank Math -  https://rankmath.com/ -->
 <title> Ideofónica CALL for Papers!</title>
