--- a/index.html
+++ b/index.html
@@ -191,13 +191,14 @@ input[type="password"] {color: #cfcfcf;}
             box-shadow: 0 4px 20px rgba(white); /* Sombra suave */
 
         }
-        #artistas{
-
-            border-radius: 10px;
-            font-size: 11;
-            margin-left: 20px;
+ #artistas{
+color: #afaeae;
+background-color: #c9efe2;
+            border-radius: 8px;
+            width: 100;
+            font-size: 13;
+            margin-left: -200px;
         }
-
 </style>
                         <!-- REDES SOCIALES -->
 
