--- a/Noticias.html
+++ b/Noticias.html
@@ -248,6 +248,14 @@ var woocommerce_params = {"ajax_url":"\/wp-admin\/admin-ajax.php","wc_ajax_url":
             font-size: 50px;
             color: rgb(166, 205, 192);
         }
+	 #artistas{
+color: #afaeae;
+background-color: #c9efe2;
+            border-radius: 8px;
+            width: 100;
+            font-size: 13;
+            margin-left: -200px;
+        }
     </style>
 </head>
 <body>
