--- a/cmdc.html
+++ b/cmdc.html
@@ -263,7 +263,15 @@ var woocommerce_params = {"ajax_url":"\/wp-admin\/admin-ajax.php","wc_ajax_url":
         H2{
             margin-left: 180px;
         }
-     
+
+	     #artistas{
+color: #afaeae;
+background-color: #c9efe2;
+            border-radius: 8px;
+            width: 100;
+            font-size: 13;
+            margin-left: -200px;
+        }
     </style>
 </head>
 <body>
