--- a/equipo.html
+++ b/equipo.html
@@ -203,6 +203,15 @@ var woocommerce_params = {"ajax_url":"\/wp-admin\/admin-ajax.php","wc_ajax_url":
                                 margin-bottom: 20px;
                                 text-align: center;
                             }
+
+				 #artistas{
+color: #afaeae;
+background-color: #c9efe2;
+            border-radius: 8px;
+            width: 100;
+            font-size: 13;
+            margin-left: -200px;
+        }
                         </style>
                     </head>
                     <body>
