--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@ background-color: #c9efe2;
                             <h2 class="text-2xl sm:text-3xl md:text-4xl font-Paytone font-bold text-white leading-none"style="color: rgba(55, 165, 129, 0.831); ">Artistas Duitamenses </h2>
                             <p class="text-white mt-6 max-w-[95%] sm:max-w-[90%] font-light font-Dosis text-justify text-lg leading-none sm:leading-tight texto-banner">Únete a nuestro catálogo de artistas</p>
                             <div class="flex items-center gap-2 mt-8 -ml-3">
-                                <a href="registro.html" target="_blank" style="color: rgb(62, 138, 119);" class="button-primary py-3 rounded-full px-8 bg-color_text text-white font-semibold font-Dosis text-base 2xl:text-lg" tabindex="-1">Registro </a>
+                                <a href="Registro.html" target="_blank" style="color: rgb(62, 138, 119);" class="button-primary py-3 rounded-full px-8 bg-color_text text-white font-semibold font-Dosis text-base 2xl:text-lg" tabindex="-1">Registro </a>
                                 <a href="catalogo.html" target="_blank" style="color: rgb(62, 138, 119);" class="button-primary py-3 rounded-full px-8 bg-color_text text-white font-semibold font-Dosis text-base 2xl:text-lg" tabindex="-1">Catálogo </a>
 
                             </div>                                      
