--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <html lang="es" prefix="og: https://ogp.me/ns#" data-lt-installed="true"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -191,7 +190,7 @@ input[type="password"] {color: #cfcfcf;}
             box-shadow: 0 4px 20px rgba(white); /* Sombra suave */
 
         }
- #artistas{
+        #artistas{
 color: #afaeae;
 background-color: #c9efe2;
             border-radius: 8px;
@@ -199,6 +198,7 @@ background-color: #c9efe2;
             font-size: 13;
             margin-left: -200px;
         }
+
 </style>
                         <!-- REDES SOCIALES -->
 
@@ -377,7 +377,7 @@ background-color: #c9efe2;
                             <h2 class="text-2xl sm:text-3xl md:text-4xl font-Paytone font-bold text-white leading-none"style="color: rgba(55, 165, 129, 0.831); ">Artistas Duitamenses </h2>
                             <p class="text-white mt-6 max-w-[95%] sm:max-w-[90%] font-light font-Dosis text-justify text-lg leading-none sm:leading-tight texto-banner">Únete a nuestro catálogo de artistas</p>
                             <div class="flex items-center gap-2 mt-8 -ml-3">
-                                <a href="Registro.html" target="_blank" style="color: rgb(62, 138, 119);" class="button-primary py-3 rounded-full px-8 bg-color_text text-white font-semibold font-Dosis text-base 2xl:text-lg" tabindex="-1">Registro </a>
+                                <a href="registro.html" target="_blank" style="color: rgb(62, 138, 119);" class="button-primary py-3 rounded-full px-8 bg-color_text text-white font-semibold font-Dosis text-base 2xl:text-lg" tabindex="-1">Registro </a>
                                 <a href="catalogo.html" target="_blank" style="color: rgb(62, 138, 119);" class="button-primary py-3 rounded-full px-8 bg-color_text text-white font-semibold font-Dosis text-base 2xl:text-lg" tabindex="-1">Catálogo </a>
 
                             </div>                                      
@@ -440,7 +440,7 @@ background-color: #c9efe2;
             <h2 class="text-4xl sm:text-5xl lg:text-4xl 2xl:text-7xl font-bold font-Paytone text-primary capitalize" style="color: black;">Servicios</h2>
             <div class="w-[20%] sm:w-[15%] h-1 rounded bg-[] mt-3"></div>
         </div>
-        <div class="w-[90%] md:w-[80%] lg:w-[40%] rounded-br-xl rounded-tr-xl relative">
+        <div class="w-[90%] md:w-[90%] lg:w-[100%] rounded-br-xl rounded-tr-xl relative">
             <div class="splide w-full h-[250px] sm:h-[370px] 2xl:h-[600px] rounded-tr-xl rounded-br-xl relative is-overflow is-initialized splide--loop splide--ltr splide--draggable is-active" id="splide-edc" role="region" aria-roledescription="carousel">
                 <div class="bg-secondary w-12 h-12 2xl:w-20 2xl:h-20 rounded-full absolute top-[40%] -right-6 2xl:-right-100 z-50 overflow-hidden">
                     <img src="auditorio.webp" alt="" class="absolute top-0 left-0 w-full h-full object-cover opacity-30 perfmatters-lazy entered pmloaded" data-src="auditorio.webp" data-ll-status="loaded">
@@ -507,7 +507,7 @@ background-color: #c9efe2;
                 </ul>
             </div>
         </div>
-        <div class="w-full lg:w-[60%] flex flex-col px-4 md:px-8 lg:px-0 lg:pl-30"> <!-- Cambiado lg:pr-40 a lg:pl-10 -->
+        <div class="w-full lg:w-[90%] flex flex-col px-4 md:px-8 lg:px-0 lg:pl-30"> <!-- Cambiado lg:pr-40 a lg:pl-10 -->
             <h2 class="hidden lg:block lg:text-4xl xl:text-5xl 2xl:text-7xl font-bold font-Paytone text-primary capitalize" style="color: black;">Servicios</h2>
             <p class="text-justify text-gray-900 font-Dosis mt-8 text-lg 2xl:text-2xl">AUDITORIO LUIS MANCIPE BRICEÑO</p>
             <p class="text-justify text-gray-900 font-Dosis mt-8 text-lg 2xl:text-2xl"> Auditorio disponible en alquiler para clausuras, capacitaciones, conferencias y actividades sociales, empresariales y artísticas.</p>
@@ -532,7 +532,7 @@ background-color: #c9efe2;
 
                 <a href="h" target="_blank" class="text-white font-semibold bg-color_text font-Dosis bg-text_color py-3 px-8 w-fit rounded-full mt-5 sm:mt-10 2xl:mt-14 text-base 2xl:text-lg" style="background-color: #b8b8d6c8;"> </a>
             </div>
-            <div class="w-[90%] md:w-[80%] lg:w-[40%] rounded-bl-xl rounded-tl-xl relative">
+            <div class="w-[90%] md:w-[80%] lg:w-[100%] rounded-bl-xl rounded-tl-xl relative">
                 <div class="splide w-full h-[250px] sm:h-[370px] 2xl:h-[500px] rounded-tl-xl rounded-bl-xl relative is-overflow is-initialized splide--loop splide--ltr splide--draggable is-active" id="splide-campesino" role="region" aria-roledescription="carousel">
                     <div class="bg-primary w-12 h-12 2xl:w-20 2xl:h-20 rounded-full absolute top-[40%] -left-6 2xl:-left-10 z-50 overflow-hidden"style="background-color: rgb(242, 245, 144);">
                     </div>
@@ -541,7 +541,7 @@ background-color: #c9efe2;
                                 <img src="convoc.webp" alt="" class="w-full h-full rounded-tl-xl rounded-bl-xl object-cover relative z-40 perfmatters-lazy entered pmloaded" data-src="sound.webp" data-ll-status="loaded"><noscript><img src="convoc.webp" alt="" class="w-full h-full rounded-tl-xl rounded-bl-xl object-cover relative z-40"></noscript>
                             </li>
                        
-                        
+                            </div>
                     </div>
             </div>
             <div class="flex flex-col px-4 lg:hidden">
