--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <html lang="es" prefix="og: https://ogp.me/ns#" data-lt-installed="true"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -530,7 +531,9 @@ background-color: #c9efe2;
                 <p class="text-justify text-gray-800 font-Dosis mt-8 text-lg 2xl:text-2xl"> ESTÍMULOS PARA INCENTIVAR LA PRODUCCIÓN CREATIVA ARTÍSTICA Y CULTURAL “DUITAMA PARA TODOS” 9° CONCURSO SÚMATE AL CUENTO 2024 Versión Poesía Género: Lírico Edición: Poema sobre el medio ambiente.</p>
                 <p class="text-justify text-gray-800 font-Dosis mt-8 text-lg 2xl:text-2xl"> Convocatoria del Programa de Beneficios Económicos Periódicos BEPS del Ministerio de las Culturas, las Artes y los Saberes y Colpensiones, hasta el 30 de abril de 2024.</p>
 
-                <a href="h" target="_blank" class="text-white font-semibold bg-color_text font-Dosis bg-text_color py-3 px-8 w-fit rounded-full mt-5 sm:mt-10 2xl:mt-14 text-base 2xl:text-lg" style="background-color: #b8b8d6c8;"> </a>
+                <a href="ConvocatoriaSumateAlCuentoPoemas2024.pdf" target="_blank" class="text-white font-semibold bg-color_text font-Dosis bg-text_color py-3 px-8 w-fit rounded-full mt-5 sm:mt-10 2xl:mt-14 text-base 2xl:text-lg" style="background-color: #b8b8d6c8;"> Cuento-Poemas-2024 </a>
+                                <a href="BENEFICIOS-ECONOMICOS-PERIODICOS-BEPS-2024.pdf" target="_blank" class="text-white font-semibold bg-color_text font-Dosis bg-text_color py-3 px-8 w-fit rounded-full mt-5 sm:mt-10 2xl:mt-14 text-base 2xl:text-lg" style="background-color: #b8b8d6c8;"> Creadores y Gestores C </a>
+
             </div>
             <div class="w-[90%] md:w-[80%] lg:w-[100%] rounded-bl-xl rounded-tl-xl relative">
                 <div class="splide w-full h-[250px] sm:h-[370px] 2xl:h-[500px] rounded-tl-xl rounded-bl-xl relative is-overflow is-initialized splide--loop splide--ltr splide--draggable is-active" id="splide-campesino" role="region" aria-roledescription="carousel">
