--- a/transparencia.html
+++ b/transparencia.html
@@ -1,4 +1,3 @@
-
 <html lang="es" prefix="og: https://ogp.me/ns#" data-lt-installed="true"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -140,6 +139,7 @@ var woocommerce_params = {"ajax_url":"\/wp-admin\/admin-ajax.php","wc_ajax_url":
             display: none;
             background-color: white;
             overflow: hidden;
+            top: 250px;
         }
 
         h4{
@@ -157,12 +157,19 @@ background-color: #c9efe2;
             font-size: 13;
             margin-left: -200px;
         }
+    .container{
+
+        margin-top: 150px;
+    }
+
     </style>
 </head>
 <body>
 
-    <h4>Transparencia</h4>
+<div class="container">  
+      <h4>Transparencia</h4>
 <img src="fe075d_ab7a644212744366924f7048d43eb85a_mv2.jpeg" alt="">
+</div>
 
 <button class="accordion">Contrataciones Adjudicadas para la Vigencia</button>
 <div class="panel">
@@ -514,3 +521,4 @@ link.addEventListener('click', function(event) {
 
 </body>
 </html>
+
