--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ var woocommerce_params = {"ajax_url":"\/wp-admin\/admin-ajax.php","wc_ajax_url":
                                             </li><li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-240" id="mega-menu-item-240"><a class="mega-menu-link" href="Pconstruc.html">Biblioteca</a></li>
 
                                         </li><li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-240" id="mega-menu-item-240"><a class="mega-menu-link" href="escuela.html">Escuela Crear Tundama</a></li><li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-230" id="mega-menu-item-230"><a >
-                                        </li><li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-240" id="mega-menu-item-240"><a class="mega-menu-link" href="convocatorias.html">Convocatorias</a></li>
+                                        </li><li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-240" id="mega-menu-item-240"><a class="mega-menu-link" href="Pconstruc.html">Convocatorias</a></li>
 
         
                                         </li>
