--- a/transparencia.html
+++ b/transparencia.html
@@ -171,6 +171,8 @@ background-color: #c9efe2;
       <h4>Transparencia</h4>
 <img src="fe075d_ab7a644212744366924f7048d43eb85a_mv2.jpeg" alt="">
 </div>
+	<img src="boton-transparencia3-768x300.jpeg" alt="">
+
 
 <button class="accordion">Contrataciones Adjudicadas para la Vigencia</button>
 <div class="panel">
