--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@ var woocommerce_params = {"ajax_url":"\/wp-admin\/admin-ajax.php","wc_ajax_url":
                             <p class="text-white mt-6 max-w-[95%] sm:max-w-[90%] font-light font-Dosis text-justify text-lg leading-none sm:leading-tight texto-banner">MISIÓN: Somos una institución que promueve e incentiva el arte y la cultura, enfocado en valores éticos para el desarrollo cívico - social de nuestra población.</p>
                             <div class="flex items-center gap-2 mt-8 -ml-3">                            <p class="text-white mt-6 max-w-[95%] sm:max-w-[90%] font-light font-Dosis text-justify text-lg leading-none sm:leading-tight texto-banner">VISIÓN: Seguir construyendo a través del arte y la cultura mejores seres humanos.</p>
 
-                                                                            <a href="" class="button-primary py-3 rounded-full px-8 bg-color_text text-white font-semibold font-Dosis text-base 2xl:text-lg" tabindex="-1">Nuestro Equipo</a>
+                                                                            <a href="equipo.html" class="button-primary py-3 rounded-full px-8 bg-color_text text-white font-semibold font-Dosis text-base 2xl:text-lg" tabindex="-1">Nuestro Equipo</a>
                     
 
                             
