--- a/catalogo.html
+++ b/catalogo.html
@@ -4,7 +4,7 @@
     <link rel="icon" type="image/x-icon" href="log.png">
     
 <!-- Optimización para motores de búsqueda de Rank Math -  https://rankmath.com/ -->
-<title> Ideofónica CALL for Papers!</title>
+<title> Catálogo de Artistas Duitamenses</title>
 <meta name="robots" content="index, follow, max-snippet:-1, max-video-preview:-1, max-image-preview:large">
 <link rel="canonical" href="">
 <meta property="og:locale" content="es_ES">
