--- a/catalogo.html
+++ b/catalogo.html
@@ -81,13 +81,14 @@ var woocommerce_params = {"ajax_url":"\/wp-admin\/admin-ajax.php","wc_ajax_url":
            
             </style>
 
-            <div class="flex itesm-center gap-0">
-                <div id="mega-menu-wrap-menu-principal" class="mega-menu-wrap"><div class="mega-menu-toggle"><div class="mega-toggle-blocks-left"><div class="mega-toggle-block mega-menu-toggle-animated-block mega-toggle-block-1" id="mega-toggle-block-1"><button aria-label="Toggle Menu" class="mega-toggle-animated mega-toggle-animated-slider" type="button" aria-expanded="false">
-                  <span class="mega-toggle-animated-box">
-                    <span class="mega-toggle-animated-inner"></span>
-                  </span>
-                </button></div></div><div class="mega-toggle-blocks-center"></div><div class="mega-toggle-blocks-right"></div></div><ul id="mega-menu-menu-principal" class="mega-menu max-mega-menu mega-menu-horizontal" data-event="hover_intent" data-effect="fade_up" data-effect-speed="200" data-effect-mobile="disabled" data-effect-speed-mobile="0" data-mobile-force-width="body" data-second-click="go" data-document-click="collapse" data-vertical-behaviour="standard" data-breakpoint="1039" data-unbind="true" data-mobile-state="collapse_all" data-hover-intent-timeout="300" data-hover-intent-interval="100"
-                 style="">
+     </style><noscript><style>.perfmatters-lazy[data-src]{display:none !important;}</style></noscript><link href="" rel="preload" as="script"><link href="" rel="preload" as="script"><link href="" rel="preload" as="script"><link href="" rel="preload" as="script"><link href="https://stats.wp.com/w.js?ver=202415" rel="preload" as="script"><link href="" rel="preload" as="script"><link href="" rel="preload" as="script"><link href="" rel="preload" as="script"><link href="" rel="preload" as="script"><link href="" rel="preload" as="script"><link href="" rel="preload" as="script"><link rel="prefetch" href="" fetchpriority="high" as="document"><link rel="prefetch" href="" fetchpriority="high" as="document"></head>
+    <header class="w-[100vw] h-[80px] lg:h-[90px] 2xl:h-[130px] fixed top-0 left-0 items-center header bg-white bg-opacity-30 backdrop-blur-[100px]">
+        </div>
+        <div class="absolute w-[94%] lg:w-[%] left-[3%] lg:left-[6%] flex items-center justify-between h-full">
+            <a href="index.html">
+
+                <img style="width: 26%"  src="logs.webp" alt="" class="w-10 h-25 2xl:w-28 2xl:h-29 object-cover">
+            </a>
 
                  
                  <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-home mega-current-menu-item mega-page_item mega-page-item-104 mega-current_page_item mega-align-bottom-left mega-menu-flyout mega-menu-item-227" id="mega-menu-item-227"><a class="mega-menu-link" href="index.html" aria-current="page" tabindex="0">Inicio</a></li>
