--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="icon" type="image/x-icon" href="Cultur_logo.webp">
     
 <!-- Optimización para motores de búsqueda de Rank Math -  https://rankmath.com/ -->
-<title> Culturama Duitama</title>
+<title> Culturama - Duitama</title>
 <meta name="robots" content="index, follow, max-snippet:-1, max-video-preview:-1, max-image-preview:large">
 <link rel="canonical" href="">
 <meta property="og:locale" content="es_ES">
@@ -105,7 +105,7 @@ var woocommerce_params = {"ajax_url":"\/wp-admin\/admin-ajax.php","wc_ajax_url":
                             
                     </li><li class="mega-menu-item mega-menu-item-type-custom mega-menu-item-object-custom mega-menu-item-has-children mega-align-bottom-left mega-menu-flyout mega-menu-item-244" id="mega-menu-item-">
                                             <a class="mega-menu-link" href="#" aria-haspopup="true" aria-expanded="false" tabindex="0">Dependencias<span class="mega-indicator" data-has-click-event="true"></span></a><ul class="mega-sub-menu" style=""> </li>
-                                            </li><li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-240" id="mega-menu-item-240"><a class="mega-menu-link" href="Pconstruc.html">Biblioteca</a></li>
+                                            </li><li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-240" id="mega-menu-item-240"><a class="mega-menu-link" href="biblioteca.html">Biblioteca</a></li>
 
                                         </li><li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-240" id="mega-menu-item-240"><a class="mega-menu-link" href="escuela.html">Escuela Crear Tundama</a></li><li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-230" id="mega-menu-item-230"><a >
                                         </li><li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-240" id="mega-menu-item-240"><a class="mega-menu-link" href="convocatorias.html">Convocatorias</a></li>
